<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fun on the Run</string>
    <string name="action_settings">Settings</string>
    <string name="range_settings">Range options</string>
    <string name="hello_world">Hello world!</string>
    <string name="src">Source</string>
    <string name="dest">Destination</string>
    <string name="submit">Submit</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="concerts">Concerts</string>
    <string name="movie_locations">Movies shot along your Route</string>
    <string name="name">Name:</string>
    <string name="rating">Rating:</string>
    <string name="status">Status:</string>
    <string name="show_on_map">Take me there!</string>
    <string name="driving_directions">Driving Directions</string>
    <string name="detail">Details</string>
    <string name="concert_details">Concert Details</string>
    <string name="movie_details">Movie Details</string>
    <string name="src_location_message">Enter Source Location:</string>
    <string name="dest_location_message">Enter Destination Location:</string>
    <string name="src_location_error_message">Please Enter Source Location</string>
    <string name="dest_location_error_message">Please Enter Destination Location</string>
    <string name="location_error_message">Please Enter Source and Destination Locations</string>
    <string name="invalid_loc_msg">could not understand this location</string>
    <string name="location">Criteria</string>
    <string name="range">Range</string>
    <string name="select_range">Select Range (In Miles)</string>
    <string name="select_location">Select Criteria</string>
    <string name="weather_title">Weather at </string>
    <string name="weather_main">Weather:</string>
    <string name="weather_desc">Description:</string>
    <string name="temperature">Temperature:</string>
    <string name="min_tem">Min. Temperature:</string>
    <string name="max_tem">Max. Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="title">Title:</string>
    <string name="film">Film:</string>
    <string name="artists">Artists:</string>
    <string name="shot_location">Shot Location:</string>
    <string name="Venue">Venue:</string>
    <string name="match_level">Match Level:</string>
    <string name="address">Address:</string>
    <string name="startdate">Start Date-Time :</string>
    <string name="website">Website:</string>
    <string name="address">Address:</string>
    <string name="categories_on_map">Categories on Map</string>

</resources>