<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventsActivity" >

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/title"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/artist_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/artists"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/artist_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/artist"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/artist_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/venue_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/Venue"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/venue_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/venue"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/venue_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/address"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/address_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/start_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/startdate"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/start_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/start_date"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/start_date_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/website_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/website"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/website_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/website"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/website_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Button
                android:id="@+id/show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/show_on_map"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>